# tectonic-ruby

./: .travis.yml  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  tectonic.gemspec
lib/: rubygems_plugin.rb  tectonic.rb
lib/tectonic/: version.rb
spec/: spec_helper.rb  tectonic_spec.rb
src/: lib.rs
